[metadata]
name = python_apiserver_client
version = 0.1.0
author = KubeRay
description = A Kuberay python client library to manage clusters based on the KubeRay API server
long_description = file: README.md
keywords = kuberay, ray, api_server, python-kuberay
license = Apache License 2.0
url = https://github.com/ray-project/kuberay/
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
install_requires = kubernetes

[options.packages.find]
exclude =
    tools*
    docs*