[tool.poetry]
name = "python-client"
version = "0.0.0-dev"
description = "Python Client for Kuberay"
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/ray-project/kuberay"
homepage = "https://github.com/ray-project/kuberay"
keywords = ["kuberay", "python", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
packages = [
  { include = "python_client" }
]

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = ">=25.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
